k8sWordpress/07wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-wordpress
  namespace: demo-wordpress
  labels:
    app: demo-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-wordpress
  template:
    metadata:
      labels:
        app: demo-wordpress
    spec:
      containers:
        - name: demo-wordpress-container
          image: wordpress
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '1Gi'
              cpu: '1'
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "chown -R 33:33 /var/www; chmod -R 774 /var/www"]
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: demo-wp-pvc
