k8sWordpress/10ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-wordpress-ingress
  namespace: demo-wordpress
  labels:
    app: demo-wordpress
  annotations:
      load-balance: random
spec:
  rules:
  - host: wordpress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-wordpress-service
            port:
              number: 80
